Set title/author/subject metadata

--- a/metadata.toml
+++ b/metadata.toml
@@ -1,3 +1,8 @@
+title = "Flower Of The West: The Runrig Songbook"
+author = "Calum and Rory Macdonald"
+subject = "Words and Music for 115 Songs; Songnotes and Photographs"
+
+[page_names]
 000a = "Front Cover"
 # 000b (Inside Front Cover)
 
